--- a/styles/Showcase.module.css
+++ b/styles/Showcase.module.css
@@ -69,7 +69,7 @@
     display: flex;
     flex-direction: row;
     width: 4500px;
-    margin-bottom: 400px;
+    margin-bottom: 200px;
 
     animation: moveSlideshowLeft 25s linear infinite;
 }
@@ -83,7 +83,7 @@
 }
 
 .desc {
-    font-size: 1vw;
+    font-size: 1.2rem;
     font-weight: 300;
     letter-spacing: 2px;
     line-height: 1.7rem;
